# intercreate-stmusbpd-lib

./: CMakeLists.txt
stm32g0/STM32_USBPD_Library/: CMakeLists.txt
stm32g0/STM32_USBPD_Library/Core/inc/: usbpd_def.h  usbpd_os_port.h
stm32g0/STM32_USBPD_Library/Core/src/: usbpd_dpm_core.c
stm32g0/STM32_USBPD_Library/Devices/STM32G0XX/src/: usbpd_cad_hw_if.c  usbpd_hw_if_it.c
stm32g4/STM32_USBPD_Library/: CMakeLists.txt
stm32g4/STM32_USBPD_Library/Core/inc/: usbpd_def.h  usbpd_os_port.h
stm32g4/STM32_USBPD_Library/Core/src/: usbpd_dpm_core.c
stm32g4/STM32_USBPD_Library/Devices/STM32G4XX/src/: usbpd_cad_hw_if.c
stm32g4x/STM32_USBPD_Library/: CMakeLists.txt
stm32g4x/STM32_USBPD_Library/Core/inc/: usbpd_def.h  usbpd_os_port.h
stm32g4x/STM32_USBPD_Library/Core/src/: usbpd_dpm_core.c
stm32g4x/STM32_USBPD_Library/Devices/STM32G4XX/src/: usbpd_hw_if_it.c  usbpd_pwr_hw_if.c
zephyr/: Kconfig
